--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGO_URI=my_mongo_uri
-EMAIL_USER=my_email
-EMAIL_PASS=my_app_pass
+MONGO_URI=
+EMAIL_USER=
+EMAIL_PASS=
 FRONTEND_URL=http://localhost:5173
